[package]
name = "lcas"
version = "0.1.0"
authors = [ "Taxrosdev" ]
description = "A library for link addressed storage."
repository = "https://github.com/timelessos/lcas"
documentation = "https://docs.rs/lcas/"
license = "MIT"
keywords = [ "file-synchronization", "software-delivery", "content-addressable", "storage" ]
categories = [ "filesystem", "os::linux-apis" ]
readme = "README.md" 
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = { version = "2.5.0", optional = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zstd = { version = "0.13.3", default-features = false,  features = ["arrays"]}

[features]
default = ["decoding"]
encoding = ["dep:walkdir"]
decoding = []
https = []

[package.metadata.docs.rs]
features = ["encoding", "decoding", "https"]
