[package]
name = "lcas"
version = "0.1.2"
authors = [ "Taxrosdev" ]
description = "A library for link addressed storage."
repository = "https://github.com/timelessos/lcas"
documentation = "https://docs.rs/lcas/"
license = "MIT"
keywords = [ "file-synchronization", "software-delivery", "content-addressable", "storage" ]
categories = [ "filesystem", "os::linux-apis" ]
readme = "README.md" 
edition = "2024"

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.19", optional = true, features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = { version = "2.5.0", optional = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zstd = { version = "0.13.3", default-features = false,  features = ["arrays"]}

[features]
default = ["decoding"]
encoding = ["dep:walkdir"]
decoding = []
https = ["dep:reqwest", "decoding"]

[package.metadata.docs.rs]
features = ["encoding", "decoding", "https"]
